@@ -1,21 +1,0 @@
-name    = MooseX-Types-NumUnit
-version = 0.02
-author  = Joel Berger <joel.a.berger@gmail.com>
-license = Perl_5
-copyright_holder = Joel Berger
-abstract = Type(s) for using units in Moose
-
-[GatherDir]
-[MetaYAML]
-[MakeMaker]
-[Manifest]
-[PruneCruft]
-[License]
-[Readme]
-[PkgVersion]
-[AutoPrereqs]
-
-[ReadmeAnyFromPod / pod.root ]
-    filename = README.pod
-    type = pod
-    location = root
