@@ -1,6 +1,7 @@
 Revision history for Perl module MooseX::Types::NumUnit
 
 0.02  
+	- Uses Module::Build
 	- Now compliant with MooseX::Types
 
 0.01  Dec 9, 2011
